--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:23.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile files('libs/volley.jar')
 }
